fix tradingviews height on iphone 5

--- a/src/components/Chart.scss
+++ b/src/components/Chart.scss
@@ -25,7 +25,11 @@ $overlay: rgba(130,130,130,.1);
     display: flex;
     #tv_chart_container {
       flex: 1;
-      height: 100%;
+      display: flex;
+      flex-direction: column;
+      iframe {
+        flex: 1;
+      }
     }
   }
 }
